[gd_scene load_steps=39 format=2]

[ext_resource path="res://Assets/Fonts/Kaph-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/therok-regular-400.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/GUI/IconButton_Large_Orange_Circle.png" type="Texture" id=3]
[ext_resource path="res://Assets/BoxesBanners/Box_WhiteOutline_Square.png" type="Texture" id=4]
[ext_resource path="res://Assets/UIIcons/Icon_Small_Blank_Pause.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/levelImages/chicken.png" type="Texture" id=6]
[ext_resource path="res://Assets/BoxesBanners/Box_Blank_Square.png" type="Texture" id=7]
[ext_resource path="res://Assets/GUI/Blue_Square.png" type="Texture" id=8]
[ext_resource path="res://Assets/Audio/levelsAudio/Chicken/askVoice1.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/GUI/Box_Rounded.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/Item2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Audio/levelsAudio/Chicken/chicken.mp3" type="AudioStream" id=12]
[ext_resource path="res://Assets/Fonts/KiriFont.otf" type="DynamicFontData" id=13]
[ext_resource path="res://Levels/MgaHayopSaBukid/Level1/1stQuestion/Level_1MHSB.gd" type="Script" id=14]
[ext_resource path="res://Levels/MgaHayopSaBukid/Level1/1stQuestion/PausePanel1.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/Audio/levelsAudio/Chicken/choiceB.mp3" type="AudioStream" id=16]
[ext_resource path="res://Assets/Audio/levelsAudio/Corn/pickAnswer.mp3" type="AudioStream" id=17]
[ext_resource path="res://Assets/Audio/levelsAudio/Chicken/choiceA.mp3" type="AudioStream" id=18]
[ext_resource path="res://Assets/Audio/levelsAudio/Chicken/choiceC.mp3" type="AudioStream" id=19]
[ext_resource path="res://Assets/Audio/levelsAudio/Chicken/manok.mp3" type="AudioStream" id=22]
[ext_resource path="res://Assets/Fonts/fredoka-one/FredokaOne-Regular.otf" type="DynamicFontData" id=23]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0.776471, 0.776471, 0.776471, 1 )
use_filter = true
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
use_filter = true
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=56]
size = 50
outline_size = 2
outline_color = Color( 0.776471, 0.776471, 0.776471, 1 )
use_filter = true
extra_spacing_top = -6
extra_spacing_char = 3
font_data = ExtResource( 23 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=57]
size = 50
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
extra_spacing_top = -6
extra_spacing_char = 3
font_data = ExtResource( 23 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=58]
size = 50
use_filter = true
extra_spacing_top = -6
extra_spacing_char = 3
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=62]
size = 28
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = -3
font_data = ExtResource( 23 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=63]
size = 28
use_filter = true
extra_spacing_top = -3
font_data = ExtResource( 23 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=61]
size = 27
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
extra_spacing_top = -4
font_data = ExtResource( 23 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=64]
size = 27
use_filter = true
extra_spacing_top = -4
font_data = ExtResource( 23 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=65]
size = 26
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
font_data = ExtResource( 23 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=66]
size = 26
use_filter = true
font_data = ExtResource( 23 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=67]
size = 27
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
extra_spacing_top = -6
font_data = ExtResource( 23 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=68]
size = 27
use_filter = true
extra_spacing_top = -8
font_data = ExtResource( 23 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 65
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 13 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=16]
size = 65
use_filter = true
font_data = ExtResource( 13 )
fallback/0 = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="NinePatchRect" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="levelBox" type="TextureRect" parent="background"]
anchor_left = 0.213867
anchor_top = 0.035
anchor_right = 0.780273
anchor_bottom = 0.138333
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="level1Line" type="Label" parent="background/levelBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = -3.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "unang tanong"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="level1Label" type="Label" parent="background/levelBox"]
anchor_right = 1.0
anchor_bottom = 0.935484
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 2 )
text = "unang tanong"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="level1Label2" type="Label" parent="background/levelBox/level1Label"]
anchor_left = -0.00106838
anchor_top = -0.0491803
anchor_right = 0.998932
anchor_bottom = 0.95082
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 3 )
text = "unang tanong"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pauseButton" type="Button" parent="background"]
anchor_left = 0.00683594
anchor_top = 0.0283333
anchor_right = 0.100586
anchor_bottom = 0.146667
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
clip_text = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pauseIcon" type="TextureRect" parent="background/pauseButton"]
anchor_left = 0.322917
anchor_top = 0.217391
anchor_right = 0.65625
anchor_bottom = 0.782609
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="imageHolder" type="Sprite" parent="background"]
position = Vector2( 250, 299 )
scale = Vector2( 0.244296, 0.247043 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="chicken" type="TextureRect" parent="background/imageHolder"]
unique_name_in_owner = true
anchor_left = 0.102218
anchor_top = 0.0824461
anchor_right = 0.905238
anchor_bottom = 0.917531
margin_left = -761.5
margin_top = -761.0
margin_right = -761.5
margin_bottom = -761.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="repeat" type="Button" parent="background/imageHolder/chicken"]
unique_name_in_owner = true
anchor_left = 0.156158
anchor_top = 0.124532
anchor_right = 0.86437
anchor_bottom = 0.886704
margin_left = -3.05176e-05
margin_top = -4.57764e-05
margin_bottom = -6.10352e-05
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="coverButton" type="Panel" parent="background/imageHolder/chicken"]
unique_name_in_owner = true
anchor_left = 0.113193
anchor_top = 0.0881327
anchor_right = 0.923539
anchor_bottom = 0.914486
margin_left = -3.05176e-05
margin_right = 0.00012207
input_pass_on_modal_close_click = false
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="infoChicken" type="AudioStreamPlayer" parent="background/imageHolder/chicken"]
unique_name_in_owner = true
stream = ExtResource( 22 )
bus = "Voices"

[node name="chickenVoice" type="AudioStreamPlayer" parent="background/imageHolder/chicken"]
unique_name_in_owner = true
stream = ExtResource( 12 )
bus = "SFX"

[node name="imageText" type="TextureRect" parent="background"]
anchor_left = 0.12793
anchor_top = 0.811667
anchor_right = 0.347656
anchor_bottom = 0.903333
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="name" type="Label" parent="background/imageText"]
anchor_top = 0.0181781
anchor_right = 1.0
anchor_bottom = 1.2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 56 )
text = "Manok"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="nameoutline" type="Label" parent="background/imageText"]
anchor_right = 1.0
anchor_bottom = 1.12728
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 57 )
text = "Manok"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="name" type="Label" parent="background/imageText/nameoutline"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 58 )
text = "Manok"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="askHolder" type="TextureRect" parent="background"]
anchor_left = 0.470703
anchor_top = 0.173333
anchor_right = 0.960938
anchor_bottom = 0.758333
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="askLabel" type="Label" parent="background/askHolder"]
anchor_left = 0.051793
anchor_top = 0.0541316
anchor_right = 0.954182
anchor_bottom = 0.393163
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 62 )
text = "1. Batay sa iyong narinig, ano ang pangalan ng hayop na nasa larawan?"
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="askLabel2" type="Label" parent="background/askHolder/askLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 63 )
text = "1. Batay sa iyong narinig, ano ang pangalan ng hayop na nasa larawan?"
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="askVoice1" type="AudioStreamPlayer" parent="background/askHolder/askLabel"]
unique_name_in_owner = true
stream = ExtResource( 9 )
bus = "Voices"

[node name="answerLabelA" type="Label" parent="background/askHolder"]
anchor_left = 0.051793
anchor_top = 0.390314
anchor_right = 0.950198
anchor_bottom = 0.581197
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 61 )
text = "A. Ang pangalan ng hayop ay manok."
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="answerLabel2" type="Label" parent="background/askHolder/answerLabelA"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 64 )
text = "A. Ang pangalan ng hayop ay manok."
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="choiceA" type="AudioStreamPlayer" parent="background/askHolder/answerLabelA"]
unique_name_in_owner = true
stream = ExtResource( 18 )
bus = "Voices"

[node name="answerLabelB" type="Label" parent="background/askHolder"]
anchor_left = 0.049801
anchor_top = 0.606838
anchor_right = 0.956174
anchor_bottom = 0.723647
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 65 )
text = "B. Ang pangalan ng hayop ay tupa."
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="answerLabelB2" type="Label" parent="background/askHolder/answerLabelB"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 66 )
text = "B. Ang pangalan ng hayop ay tupa."
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="choiceB" type="AudioStreamPlayer" parent="background/askHolder/answerLabelB"]
unique_name_in_owner = true
stream = ExtResource( 16 )
bus = "Voices"

[node name="answerLabelB2" type="Label" parent="background/askHolder"]
anchor_left = 0.0478089
anchor_top = 0.757835
anchor_right = 0.946214
anchor_bottom = 0.874644
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 67 )
text = "C. Ang pangalan ng hayop ay bibi"
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="answerLabelB2" type="Label" parent="background/askHolder/answerLabelB2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 68 )
text = "C. Ang pangalan ng hayop ay bibi"
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="choiceC" type="AudioStreamPlayer" parent="background/askHolder/answerLabelB2"]
unique_name_in_owner = true
stream = ExtResource( 19 )
bus = "Voices"

[node name="AnswerPanel" type="Control" parent="background"]
anchor_left = 0.553711
anchor_top = 0.771667
anchor_right = 0.890625
anchor_bottom = 0.930001
__meta__ = {
"_edit_lock_": true
}

[node name="A" type="Button" parent="background/AnswerPanel"]
unique_name_in_owner = true
visible = false
margin_right = 95.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 10 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[node name="pickA" type="Label" parent="background/AnswerPanel/A"]
anchor_left = 0.0947368
anchor_top = 0.0842112
anchor_right = 0.905263
anchor_bottom = 0.926316
rect_min_size = Vector2( 75, 75 )
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 15 )
text = "A
"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pickA2" type="Label" parent="background/AnswerPanel/A/pickA"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 16 )
text = "A"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="B" type="Button" parent="background/AnswerPanel"]
unique_name_in_owner = true
visible = false
margin_left = 125.0
margin_right = 220.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 10 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[node name="pickB" type="Label" parent="background/AnswerPanel/B"]
anchor_left = 0.0842105
anchor_top = 0.147368
anchor_right = 0.915789
anchor_bottom = 0.936842
rect_min_size = Vector2( 75, 75 )
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 15 )
text = "B
"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pickB2" type="Label" parent="background/AnswerPanel/B/pickB"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 16 )
text = "B"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="C" type="Button" parent="background/AnswerPanel"]
unique_name_in_owner = true
visible = false
margin_left = 250.0
margin_right = 345.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 10 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[node name="pickC" type="Label" parent="background/AnswerPanel/C"]
anchor_left = 0.0842105
anchor_top = 0.0947368
anchor_right = 0.915789
anchor_bottom = 0.936842
rect_min_size = Vector2( 75, 75 )
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 15 )
text = "C"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pickC2" type="Label" parent="background/AnswerPanel/C/pickC"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 16 )
text = "C"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="pickAnswer" type="AudioStreamPlayer" parent="background/AnswerPanel"]
unique_name_in_owner = true
stream = ExtResource( 17 )
bus = "Voices"

[node name="pausePanel" parent="." instance=ExtResource( 15 )]
unique_name_in_owner = true

[connection signal="pressed" from="background/pauseButton" to="." method="_on_pauseButton_pressed"]
[connection signal="pressed" from="background/imageHolder/chicken/repeat" to="." method="_on_repeat_pressed"]
[connection signal="finished" from="background/imageHolder/chicken/infoChicken" to="." method="_on_infoChicken_finished"]
[connection signal="finished" from="background/imageHolder/chicken/chickenVoice" to="." method="_on_chickenVoice_finished"]
[connection signal="finished" from="background/askHolder/askLabel/askVoice1" to="." method="_on_askVoice1_finished"]
[connection signal="finished" from="background/askHolder/answerLabelA/choiceA" to="." method="_on_choiceA_finished"]
[connection signal="finished" from="background/askHolder/answerLabelB/choiceB" to="." method="_on_choiceB_finished"]
[connection signal="finished" from="background/askHolder/answerLabelB2/choiceC" to="." method="_on_choiceC_finished"]
[connection signal="finished" from="background/AnswerPanel/pickAnswer" to="." method="_on_pickAnswer_finished"]
[connection signal="pressed" from="pausePanel/bg/x" to="." method="_on_x_pressed"]

[editable path="pausePanel"]
